--- a/agro/farmer_page.html
+++ b/agro/farmer_page.html
@@ -15,12 +15,12 @@
     </header>
 
     <div class="container">
-      <button onclick="window.location.href='#'">
+      <button onclick="window.location.href='#'" width="100px" height="200px">
         <img
           src="cropimg.png"
           alt="Add Crop Details"
-          width="100"
-          height="100"
+          width="100px"
+          height="100px"
         />
         Add Crop details
       </button>
