--- a/agro/html1.html
+++ b/agro/html1.html
@@ -28,6 +28,7 @@
           <li>Place orders and manage deliveries</li>
           <li>Leave reviews and ratings</li>
         </ul>
+        <p>hello</p>
       </section>
     </main>
   </body>
