fixed buttons and file organization

--- a/agro/farmer_website/farmer_page.html
+++ b/agro/farmer_website/farmer_page.html
@@ -15,7 +15,7 @@
     </header>
 
     <div class="container">
-      <button onclick="window.location.href='#'" width="100px" height="200px">
+      <button onclick="window.location.href='#'" id="btn1">
         <img
           src="cropimg.png"
           alt="Add Crop Details"
@@ -25,7 +25,7 @@
         Add Crop details
       </button>
 
-      <button onclick="window.location.href='#'">
+      <button onclick="window.location.href='#'" id="btn2">
         <img
           src="farmer_selling2.jpg"
           alt="Add Crop Details"
@@ -34,7 +34,7 @@
         />
         Add Ready to Sell Crop Details
       </button>
-      <button onclick="window.location.href='#'">
+      <button onclick="window.location.href='#'" id="btn3">
         <img
           src="farmer_account.jpg"
           alt="Add Crop Details"
